crates/libs/frieze/tests/ui/unit_struct.stderr
error: frieze: #[derive(Schema)] requires a struct with named fields; unit structs are not supported.
 --> tests/ui/unit_struct.rs:4:8
  |
4 | struct S;
  |        ^
